atualização de pagina e inserção de imagens clientes

--- a/about-us.html
+++ b/about-us.html
@@ -167,24 +167,27 @@
         </div>
         <div class="small-12 large-6 columns">
           <div class="wd-title-block">
-            <h5>Why Choose Us</h5>
+            <h5>Porque escolher a Alfa Suportel</h5>
           </div>
-          <p>We Are ROOFING the simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,We Are solar the simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry’s standard.</p>
+          <p>A Suportel foi fundada em 1989, na época era apenas uma empresa que produzia trempe de fogão para reposição de peças, mas com o passar dos anos foi adquirindo experiência, credibilidade, maquinário para poder desenvolver novos produtos.
+
+Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com o nosso nome e compromisso junto aos clientes, fornecedores e não podemos esquecer de nossos colaboradores (funcionários), que são nossa riqueza.
+</p>
           <div class="row p-t-30 full-width">
             <div class="small-12 large-6 columns">
               <ul class="list-icon check-square-o">
-                <li>We are awesome people to meet</li>
-                <li>We’re happy to help in the purchase</li>
-                <li>We have the latest technologies</li>
-                <li>Sed ut perspiciatis unde omnis</li>
+                <li>Somos pessoas determinadas</li>
+                <li>Ficamos felizes em ajudar na compra</li>
+                <li>Temos as últimas tecnologias</li>
+                <li>Nosso produtos são de alta qualidade</li>
               </ul>
             </div>
             <div class="small-12 large-6 columns">
               <ul class="list-icon check-square-o">
-                <li>The quality is our goal</li>
-                <li>Optimizing the resource is good</li>
-                <li>Printer took a galley of type and</li>
-                <li>We are awesome people to meet</li>
+                <li>A qualidade é nosso objetivo</li>
+                <li>Otimizar o recurso é bom</li>
+                <li>Churrasqueiras é nosso foco</li>
+                <li>nossa linha de produção e a melhor</li>
               </ul>
             </div>
           </div>
@@ -200,8 +203,8 @@
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="wd-title-section_l">
-            <h2>Interesting Facts</h2>
-            <h5>Our numbers</h5>
+            <h2>Fatos interessantes</h2>
+            <h5>Nossos números</h5>
           </div>
         </div>
       </div>
@@ -215,19 +218,19 @@
         <div class="small-12 large-3 columns">
           <div class="wd-fucts">
             <div class="number" data-file="1000">2119</div>
-            <div class="title"><span>RESIDENTIAL</span></div>
+            <div class="title"><span>RESTAURANTES</span></div>
           </div>
         </div>
         <div class="small-12 large-3 columns">
           <div class="wd-fucts">
             <div class="number" data-file="1000">2303</div>
-            <div class="title"><span>RESIDENTIAL</span></div>
+            <div class="title"><span>CARRINHO DE RUA</span></div>
           </div>
         </div>
         <div class="small-12 large-3 columns">
           <div class="wd-fucts">
             <div class="number" data-file="1000">1023</div>
-            <div class="title"><span>RESIDENTIAL</span></div>
+            <div class="title"><span>BARES</span></div>
           </div>
         </div>
       </div>
@@ -241,8 +244,8 @@
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="wd-title-section_l">
-            <h2>Our Team</h2>
-            <h5>We are awesome people</h5>
+            <h2>Nosso Time</h2>
+            <h5>Somos pessoas incríveis</h5>
           </div>
         </div>
       </div>
@@ -254,7 +257,7 @@
                 <img width="600" height="598" src="http://via.placeholder.com/600x598" class="attachment-wd_team size-wd_team" alt="">
                 <h4 class="wd-title-element">Chauffina Carr</h4>
                 <p>
-                  Logan grew up in a household where design was very important. His father was a chief furniture deisgn for
+                  Somos uma empresa Familiar por isso pensamos primeiro no ser humano, sempre pensando no melhor para todos na empresa.Temos uma equipe que faz parte da nossa empresa antes mesmo dela ser criada, o Sr Luiz Donato (falecido em 1991) empregou na Alfa fogões nossos ferramenteiros com apenas 14anos de idade, na época e até hoje trabalham com a nossa família.
                 </p>
               </div>
             </li>
@@ -263,8 +266,7 @@
                 <img width="600" height="598" src="http://via.placeholder.com/600x598" class="attachment-wd_team size-wd_team" alt="">
                 <h4 class="wd-title-element">Parsley Montana</h4>
                 <p>
-                  Logan grew up in a household where design was very important. His father was a chief furniture deisgn for
-                </p>
+                  Podemos dizer que nossa empresa é uma grande família, todos que nos conhecem sentem a mesma sensação. Somos fieis aos nossos fornecedores e nossos clientes.
               </div>
 
             </li>
@@ -273,7 +275,7 @@
                 <img width="600" height="598" src="http://via.placeholder.com/600x598" class="attachment-wd_team size-wd_team" alt="">
                 <h4 class="wd-title-element">Bodrum Salvador</h4>
                 <p>
-                  Logan grew up in a household where design was very important. His father was a chief furniture deisgn for
+                  Queremos continuar com a empresa familiar, mas competitividade e forte no mercado com inovações um bom atendimento e sempre honrando o nome da família Donato.
                 </p>
               </div>
             </li>
@@ -282,7 +284,7 @@
                 <img width="600" height="598" src="http://via.placeholder.com/600x598" class="attachment-wd_team size-wd_team" alt="">
                 <h4 class="wd-title-element">Nathaneal Down</h4>
                 <p>
-                  Logan grew up in a household where design was very important. His father was a chief furniture deisgn for
+                  Criar novos produtos focando o bem estar do cliente , trazer um pouco de felicidade ao utilizar nossos produtos .
                 </p>
               </div>
 
@@ -300,29 +302,30 @@
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="wd-title-section_l">
-            <h2>Testimonials</h2>
-            <h5>this is a subtitle</h5>
+            <h2>Testemunhos</h2>
+            <h5>Comentarios dos diretores</h5>
           </div>
         </div>
       </div>
+      <!--imagens size 7070 -->
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="owl-testimonail wd-testimonail owl-carousel owl-theme">
             <blockquote>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              <img src="http://via.placeholder.com/70x70" alt="testimonail">
+              <p>Trabalhar é necessário, com o respeito e a união familiar é imprescindível” Luiz Antonio Donato filho..</p>
+              <img src="images/usuarios/Leandro Coelho.jpg" alt="testimonail">
               <cite>John Harris</cite>
               <div class="job-title"></div>
             </blockquote>
             <blockquote>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              <img src="http://via.placeholder.com/70x70" alt="testimonail">
+              <p>Nossa missão é produzir conteúdos isentos e disseminá-los, informando ao leitor tudo o que ocorre no mercado online, com o intuito de contribuir com o desenvolvimento do comércio eletrônico brasileiro.</p>
+              <img src="images/usuarios/Leandro Coelho.jpg" alt="testimonail">
               <cite>Alex Joan</cite>
               <div class="job-title"></div>
             </blockquote>
             <blockquote>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              <img src="http://via.placeholder.com/70x70" alt="testimonail">
+              <p>proficional e confiavel, equipamento com otima qualidade recomendo</p>
+              <img src="images/usuarios/Leandro Coelho.jpg" alt="testimonail">
               <cite>Aleen Valzac</cite>
               <div class="job-title"></div>
             </blockquote>
@@ -339,22 +342,22 @@
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="wd-title-section_l">
-            <h2>Our Clients</h2>
-            <h5>They are awesome people</h5>
+            <h2>Nossos Clientes</h2>
+            <h5>Estes são nosso forte!</h5>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="carousel_client owl-carousel text-center owl-theme" data-clienttoshow="5">
-            <img class="prettyphoto" src="images/frigidaire.png" alt="">
-            <img class="prettyphoto" src="images/amana.png" alt="">
-            <img class="prettyphoto" src="images/whirlpool.png" alt="">
-            <img class="prettyphoto" src="images/rca.png" alt="">
-            <img class="prettyphoto" src="images/maytag.png" alt="">
-            <img class="prettyphoto" src="images/kitchenaid.png" alt="">
-            <img class="prettyphoto" src="images/kenmore.png" alt="">
-            <img class="prettyphoto" src="images/general-electric.png" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/casasbahia.jpeg" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/fastshop.png" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/lojasamericanas.png" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/magazineluiza.jpeg" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/pontofrio.jpeg" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/ricardoeletro.jpeg" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/extra.png" alt="">
+            <img class="prettyphoto" stile="width: 226px; margin-right: 10px;" src="images/clientes/walmart.png" alt="">
           </div>
         </div>
       </div>
@@ -371,28 +374,28 @@
             <div class="textwidget">
               <div class="widget-logo">
                 <img alt="logo" src="images/logo/logo alfa suportel .png">
-                <p>The Flooring inc. is the leader of floor installation and repair in the country sed diam nonumy eirmod tempor invidunt ut labore and efficient strategy.</p>
+                <p>AlfaSuportel. é o líder churrasqueiras.</p>
               </div>
             </div>
           </li>
         </ul>
         <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
           <li>
-            <h2 class="block-title">Get in Touch</h2>
+            <h2 class="block-title">Entrar em contato</h2>
             <div class="textwidget">
               <div class="widget-info">
                 <ul>
                   <li>
-                  <span><span>Phone:</span> +1 123 457 653</span>
+                  <span><span>Phone:</span> (11) 2511-2233</span>
                 </li>
                   <li>
-                  <span><span>Fax:</span> +1 496 457 654</span>
+                  <span><span>Fax:</span> (11) 2511-2144</span>
                 </li>
                   <li>
-                  <span><span>Email:</span> <a href="mailto:email@website.com">our-mail@example.com</a></span>
+                  <span><span>Email:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">our-alfasuportel@alfasuportel.com.br</a></span>
                 </li>
                   <li>
-                  <span><span>Adress:</span> 121 King Street, Melbourne 3000 Australia</span>
+                  <span><span>endereço:</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
                 </li>
                 </ul>
               </div>
@@ -404,7 +407,7 @@
             <h2 class="block-title">Newsletter</h2>
             <div class="textwidget">
               <div class="wd-newsletter">
-                Sign up your newsletter
+                Assine seu boletim informativo
                 <div>
               <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
               <input type="submit" class="newslettersubmit" value="GO">
@@ -418,9 +421,7 @@
                 <li class="twitter">
                   <a href="https://twitter.com/#"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li class="vimeo">
-                  <a href="https://vimeo.com/#"><i class="fa fa-vimeo-square"></i></a>
-                </li>
+                
               </ul>
             </div>
               </div>
@@ -433,16 +434,16 @@
           <div class="small-12 large-12 columns">
             <div class="copyright-menu">
               <ul id="menu-footer-menu" class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about-us.html">Quem Somos</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contato</a></li>
               </ul>
             </div>
           </div>
           <div class="copyright small-12 large-12 columns">
             <p>
-              © 2017 Flooring All rights reserved.
+              © 2018 SdMarketingMobile.
             </p>
           </div>
         </div>
