--- a/index.html
+++ b/index.html
@@ -394,19 +394,19 @@
           <div class="owl-testimonail wd-testimonail owl-carousel owl-theme">
             <blockquote>
               <p>“Trabalhar é necessário, com o respeito e a união familiar é imprescindível” Luiz Antonio Donato filho.</p>
-              <img src="images/Leandro Coelho.jpg" alt="testimonail">
+              <img src="images/usuarios/Leandro Coelho.jpg" alt="testimonail">
               <cite>John Harris</cite>
               <div class="Leandro Coelho"></div>
             </blockquote>
             <blockquote>
               <p>Nossa missão é produzir conteúdos isentos e disseminá-los, informando ao leitor tudo o que ocorre no mercado online, com o intuito de contribuir com o desenvolvimento do comércio eletrônico brasileiro..</p>
-              <img src="images/Leandro Coelho.jpg" alt="testimonail">
+              <img src="images/usuarios/Leandro Coelho.jpg" alt="testimonail">
               <cite>Alex Joan</cite>
               <div class="job-title"></div>
             </blockquote>
             <blockquote>
               <p>Embora oferecer aos seus clientes uma recompensa como incentivo para deixar uma avaliação funcione bem na maioria dos casos, isso pode não ser completamente necessário. Quem sabe um simples e-mail bem escrito possa ser a solução para receber avaliações de produto. Por isso, testei um e-mail sem nenhuma recompensa:.</p>
-              <img src="images/Leandro Coelho.jpg" alt="testimonail">
+              <img src="images/usuarios/Leandro Coelho.jpg" alt="testimonail">
               <cite>Aleen Valzac</cite>
               <div class="job-title"></div>
             </blockquote>
