inserção de imagens demonstrativas aba Quem somos

--- a/about-us.html
+++ b/about-us.html
@@ -412,14 +412,11 @@ Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com
               <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
               <input type="submit" class="newslettersubmit" value="GO">
               <ul class="inline-list">
-                <li class="flickr">
-                  <a href="http://www.flickr.com/#"><i class="fa fa-flickr"></i></a>
-                </li>
                 <li class="facebook">
-                  <a href="https://www.facebook.com/#"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="twitter">
-                  <a href="https://twitter.com/#"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
                 </li>
                 
               </ul>
