atualizações de top mar e footer em todas as paginas

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>Flooring Company WordPress Theme – Just another WordPress site</title>
+    <title>AlfaSuportel</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
     <link rel="stylesheet" href="stylesheets/owl.carousel.css">
     <link rel="stylesheet" href="stylesheets/owl.theme.css">
@@ -392,90 +392,84 @@
 
     <!-- Start Footer -->
 
-    <section class="wd-footer">
-      <div class="row animation-parent" data-animation-delay="180">
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-          <li>
-            <div class="textwidget">
-              <div class="widget-logo">
-                <img alt="logo" src="images/logo-white.png">
-                <p>The Flooring inc. is the leader of floor installation and repair in the country sed diam nonumy eirmod tempor invidunt ut labore and efficient strategy.</p>
-              </div>
+  <section class="wd-footer">
+    <div class="row animation-parent" data-animation-delay="180">
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <div class="textwidget">
+            <div class="widget-logo">
+              <img alt="logo" src="images/logo/logo alfa suportel .png">
+              <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
             </div>
-          </li>
-        </ul>
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-          <li>
-            <h2 class="block-title">Get in Touch</h2>
-            <div class="textwidget">
-              <div class="widget-info">
-                <ul>
-                  <li>
-                  <span><span>Phone:</span> +1 123 457 653</span>
+          </div>
+        </li>
+      </ul>
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <h2 class="block-title">Entrar em contato</h2>
+          <div class="textwidget">
+            <div class="widget-info">
+              <ul>
+                <li>
+                  <span><span>TEL:</span> (11) 2511-2233</span>
                 </li>
-                  <li>
-                  <span><span>Fax:</span> +1 496 457 654</span>
+                <li>
+                  <span><span>TEL:</span> (11) 2511-2144</span>
                 </li>
-                  <li>
-                  <span><span>Email:</span> <a href="mailto:email@website.com">our-mail@example.com</a></span>
+                <li>
+                  <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
                 </li>
-                  <li>
-                  <span><span>Adress:</span> 121 King Street, Melbourne 3000 Australia</span>
+                <li>
+                  <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
                 </li>
+              </ul>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <h2 class="block-title">Newsletter</h2>
+          <div class="textwidget">
+            <div class="wd-newsletter">
+              Assine seu boletim informativo
+              <div>
+                <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
+                <input type="submit" class="newslettersubmit" value="GO">
+                <ul class="inline-list">              
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li class="instagram">
+                    <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
+                  </li>                
                 </ul>
               </div>
             </div>
-          </li>
-        </ul>
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-          <li>
-            <h2 class="block-title">Newsletter</h2>
-            <div class="textwidget">
-              <div class="wd-newsletter">
-                Sign up your newsletter
-                <div>
-              <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
-              <input type="submit" class="newslettersubmit" value="GO">
-              <ul class="inline-list">
-                <li class="flickr">
-                  <a href="http://www.flickr.com/#"><i class="fa fa-flickr"></i></a>
-                </li>
-                <li class="facebook">
-                  <a href="https://www.facebook.com/#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="twitter">
-                  <a href="https://twitter.com/#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="vimeo">
-                  <a href="https://vimeo.com/#"><i class="fa fa-vimeo-square"></i></a>
-                </li>
-              </ul>
-            </div>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <footer class="wd-copyright">
-        <div class="row">
-          <div class="small-12 large-12 columns">
-            <div class="copyright-menu">
-              <ul id="menu-footer-menu" class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </div>
           </div>
-          <div class="copyright small-12 large-12 columns">
-            <p>
-              © 2017 Flooring All rights reserved.
-            </p>
+        </li>
+      </ul>
+    </div>
+    <footer class="wd-copyright">
+      <div class="row">
+        <div class="small-12 large-12 columns">
+          <div class="copyright-menu">
+            <ul id="menu-footer-menu" class="menu">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="about-us.html">Quem Somos</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="contact.html">Contato</a></li>
+            </ul>
           </div>
         </div>
-      </footer>
-    </section>
+        <div class="copyright small-12 large-12 columns">
+          <p>
+            © 2018 SDmarketingMobile All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+  </section>
 
     <!-- End Footer -->
 
