--- a/about-us.html
+++ b/about-us.html
@@ -36,34 +36,20 @@
             </li>
           </ul>
           <section class="creative top-bar-section right">
-            <div class="menu-main-menu-container">
-              <ul id="menu-main-menu" class="menu">
-                <li id="menu-item-1324">
-                  <a href="index.html" class="has-icon">INICIO</a>
-                </li>
-                <li id="menu-item-1295" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">PAGINAS</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">paginas</a></li>
-                    <li id="menu-item-1309">
-                      <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
-                    </li>
-                    <li id="menu-item-1313">
-                      <a href="services.html" class="has-icon">Serviços</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Catalogo</a>
+          <div class="menu-main-menu-container">
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                  <a href="#" class="has-icon">PRODUTOS</a>
                   <ul class="sub-menu dropdown">
                     <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Catalogo</a></li>
                     <li id="menu-item-1300" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Estilo I</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
+                      <a href="#" class="has-icon">CHURRASQUEIRAS</a>
+                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                         <li id="menu-item-1317">
-                          <a href="portfolio-columns.html" class="has-icon">Catalogo colunas</a>
+                          <a href="portfolio-columns.html" class="has-icon">Catalogo Colunas</a>
                         </li>
                         <li id="menu-item-1316">
-                          <a href="portfolio-three-columns.html" class="has-icon">Catalogo 3 colunas</a>
+                          <a href="portfolio-three-columns.html" class="has-icon">Catalogo 3 Colunas</a>
                         </li>
                         <li id="menu-item-1315">
                           <a href="portfolio-two.html" class="has-icon">Catalogo 2 Columns</a>
@@ -71,65 +57,88 @@
                       </ul>
                     </li>
                     <li id="menu-item-1301" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Estilo II</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo II</a></li>
+                      <a href="#" class="has-icon">GRELHAS</a>
+                      <ul class="sub-menu dropdown">
+                        <li class="title back js-generated">
+                          <h5>
+                            <a href="javascript:void(0)">Back</a>
+                          </h5>
+                        </li>
+                        <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo II</a></li>
                         <li id="menu-item-1319">
-                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Catalogo Estilo II Two colunas</a>
+                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Catalogo Estilo II  Colunas</a>
                         </li>
                         <li id="menu-item-1320">
-                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Catalogo Estilo II Theree colunas</a>
+                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Catalogo Estilo II 3 Colunas</a>
                         </li>
                         <li id="menu-item-1321">
-                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Catalogo Estilo II Four colunas</a>
-                        </licolunas                      </ul>
+                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Catalogo Estilo II 4 Colunas</a>
+                        </li>
+                      </ul>
                     </li>
                     <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Catalogo Unico</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Catalogo Unico</a></li>
+                      <a href="#" class="has-icon">ESPETO</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
                         <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Catalogo Unico</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">FRIGIDEIRA A GAS</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">CHAPEIRA</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">GRILLS</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">FOGÕES</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
                         </li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li id="menu-item-1298" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Blog</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Blog</a></li>
-                    <li id="menu-item-1307">
-                      <a href="blog.html" class="has-icon">Classical Blog</a>
-                    </li>
-                    <li id="menu-item-1314">
-                      <a href="blog-columns.html" class="has-icon">Blog Columns</a>
-                    </li>
-                    <li id="menu-item-1297">
-                      <a href="single-blog.html" class="has-icon">Post</a> Unico
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1296" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Elemento</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Elemento</a></li>
-                    <li id="menu-item-1312">
-                      <a href="call-to-action.html" class="has-icon">Call To Action</a>
-                    </li>
-                    <li id="menu-item-1311">
-                      <a href="pricing-tables.html" class="has-icon">Pricing Tables</a>
-                    </li>
-                    <li id="menu-item-1310">
-                      <a href="faq.html" class="has-icon">FAQ</a>
-                    </li>
-                    <li id="menu-item-1318">
-                      <a href="columns.html" class="has-icon">Contato</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">Contato</a>
+              <li id="menu-item-1295" class="has-dropdown not-click">
+                <a href="#" class="has-icon">PAGINAS</a>
+                <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">PAGINAS</a></li>
+                  <li id="menu-item-1309">
+                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+                  </li>
+                  <li id="menu-item-1308">
+                    <a href="contact.html" class="has-icon">CONTATOS</a>
+                  </li>
+                </ul>
+                
               </li>
-              </ul>
-            </div>
-          </section>
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">CONTATOS</a>
+              </li>
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+              </li>
+            </ul>
+          </div>
+        </section>
         </nav>
       </div>
     </header>
@@ -171,8 +180,8 @@
           </div>
           <p>A Suportel foi fundada em 1989, na época era apenas uma empresa que produzia trempe de fogão para reposição de peças, mas com o passar dos anos foi adquirindo experiência, credibilidade, maquinário para poder desenvolver novos produtos.
 
-Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com o nosso nome e compromisso junto aos clientes, fornecedores e não podemos esquecer de nossos colaboradores (funcionários), que são nossa riqueza.
-</p>
+            Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com o nosso nome e compromisso junto aos clientes, fornecedores e não podemos esquecer de nossos colaboradores (funcionários), que são nossa riqueza.
+          </p>
           <div class="row p-t-30 full-width">
             <div class="small-12 large-6 columns">
               <ul class="list-icon check-square-o">
@@ -284,7 +293,7 @@ Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com
             <div class="textwidget">
               <div class="widget-logo">
                 <img alt="logo" src="images/logo/logo alfa suportel .png">
-                <p>AlfaSuportel. é o líder churrasqueiras.</p>
+                <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
               </div>
             </div>
           </li>
@@ -296,17 +305,17 @@ Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com
               <div class="widget-info">
                 <ul>
                   <li>
-                  <span><span>Phone:</span> (11) 2511-2233</span>
-                </li>
+                    <span><span>TEL:</span> (11) 2511-2233</span>
+                  </li>
                   <li>
-                  <span><span>Fax:</span> (11) 2511-2144</span>
-                </li>
+                    <span><span>TEL:</span> (11) 2511-2144</span>
+                  </li>
                   <li>
-                  <span><span>Email:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">our-alfasuportel@alfasuportel.com.br</a></span>
-                </li>
+                    <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
+                  </li>
                   <li>
-                  <span><span>endereço:</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
-                </li>
+                    <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -319,18 +328,17 @@ Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com
               <div class="wd-newsletter">
                 Assine seu boletim informativo
                 <div>
-              <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
-              <input type="submit" class="newslettersubmit" value="GO">
-              <ul class="inline-list">
-                <li class="facebook">
-                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="twitter">
-                  <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-                </li>
-                
-              </ul>
-            </div>
+                  <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
+                  <input type="submit" class="newslettersubmit" value="GO">
+                  <ul class="inline-list">              
+                    <li class="facebook">
+                      <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li class="instagram">
+                      <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
+                    </li>                
+                  </ul>
+                </div>
               </div>
             </div>
           </li>
@@ -350,7 +358,7 @@ Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com
           </div>
           <div class="copyright small-12 large-12 columns">
             <p>
-              © 2018 SdMarketingMobile.
+              © 2018 SDmarketingMobile All rights reserved.
             </p>
           </div>
         </div>
