--- a/columns.html
+++ b/columns.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>Flooring Company WordPress Theme – Just another WordPress site</title>
+    <title>AlfaSuportel</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
     <link rel="stylesheet" href="stylesheets/owl.carousel.css">
     <link rel="stylesheet" href="stylesheets/owl.theme.css">
@@ -25,7 +25,7 @@
             <li class="name">
               <h1>
                 <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
-                  <img alt="logo" src="images/logo-white.png">
+                  <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
                 </a>
               </h1>
             </li>
@@ -34,101 +34,109 @@
             </li>
           </ul>
           <section class="creative top-bar-section right">
-            <div class="menu-main-menu-container">
-              <ul id="menu-main-menu" class="menu">
-                <li id="menu-item-1324">
-                  <a href="index.html" class="has-icon">Home</a>
-                </li>
-                <li id="menu-item-1295" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">pages</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">pages</a></li>
-                    <li id="menu-item-1309">
-                      <a href="about-us.html" class="has-icon">About Us</a>
-                    </li>
-                    <li id="menu-item-1313">
-                      <a href="services.html" class="has-icon">Services</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Portfolio</a>
+          <div class="menu-main-menu-container">
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                  <a href="#" class="has-icon">PRODUTOS</a>
                   <ul class="sub-menu dropdown">
-                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Portfolio</a></li>
+                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Catalogo</a></li>
                     <li id="menu-item-1300" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Style I</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Style I</a></li>
+                      <a href="#" class="has-icon">CHURRASQUEIRAS</a>
+                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                         <li id="menu-item-1317">
-                          <a href="portfolio-columns.html" class="has-icon">Portfolio columns</a>
+                          <a href="portfolio-columns.html" class="has-icon">Catalogo Colunas</a>
                         </li>
                         <li id="menu-item-1316">
-                          <a href="portfolio-three-columns.html" class="has-icon">Portfolio three columns</a>
+                          <a href="portfolio-three-columns.html" class="has-icon">Catalogo 3 Colunas</a>
                         </li>
                         <li id="menu-item-1315">
-                          <a href="portfolio-two.html" class="has-icon">Portfolio Two Columns</a>
+                          <a href="portfolio-two.html" class="has-icon">Catalogo 2 Columns</a>
                         </li>
                       </ul>
                     </li>
                     <li id="menu-item-1301" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Style II</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Style II</a></li>
+                      <a href="#" class="has-icon">GRELHAS</a>
+                      <ul class="sub-menu dropdown">
+                        <li class="title back js-generated">
+                          <h5>
+                            <a href="javascript:void(0)">Back</a>
+                          </h5>
+                        </li>
+                        <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo II</a></li>
                         <li id="menu-item-1319">
-                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Portfolio Style II Two Columns</a>
+                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Catalogo Estilo II  Colunas</a>
                         </li>
                         <li id="menu-item-1320">
-                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Portfolio Style II Theree Columns</a>
+                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Catalogo Estilo II 3 Colunas</a>
                         </li>
                         <li id="menu-item-1321">
-                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Portfolio Style II Four Columns</a>
+                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Catalogo Estilo II 4 Colunas</a>
                         </li>
                       </ul>
                     </li>
                     <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Single portfolio</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Single portfolio</a></li>
+                      <a href="#" class="has-icon">ESPETO</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
                         <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Single Portfolio</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">FRIGIDEIRA A GAS</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">CHAPEIRA</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">GRILLS</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li id="menu-item-1302" class="has-dropdown not-click">
+                      <a href="#" class="has-icon">FOGÕES</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
+                        <li id="menu-item-1303">
+                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
                         </li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li id="menu-item-1298" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Blog</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Blog</a></li>
-                    <li id="menu-item-1307">
-                      <a href="blog.html" class="has-icon">Classical Blog</a>
-                    </li>
-                    <li id="menu-item-1314">
-                      <a href="blog-columns.html" class="has-icon">Blog Columns</a>
-                    </li>
-                    <li id="menu-item-1297">
-                      <a href="single-blog.html" class="has-icon">Single Post</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1296" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Element</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Element</a></li>
-                    <li id="menu-item-1312">
-                      <a href="call-to-action.html" class="has-icon">Call To Action</a>
-                    </li>
-                    <li id="menu-item-1311">
-                      <a href="pricing-tables.html" class="has-icon">Pricing Tables</a>
-                    </li>
-                    <li id="menu-item-1310">
-                      <a href="faq.html" class="has-icon">FAQ</a>
-                    </li>
-                    <li id="menu-item-1318">
-                      <a href="columns.html" class="has-icon">Columns</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">Contact</a>
+              <li id="menu-item-1295" class="has-dropdown not-click">
+                <a href="#" class="has-icon">PAGINAS</a>
+                <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">PAGINAS</a></li>
+                  <li id="menu-item-1309">
+                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+                  </li>
+                  <li id="menu-item-1308">
+                    <a href="contact.html" class="has-icon">CONTATOS</a>
+                  </li>
+                </ul>
+                
               </li>
-              </ul>
-            </div>
-          </section>
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">CONTATOS</a>
+              </li>
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+              </li>
+            </ul>
+          </div>
+        </section>
         </nav>
       </div>
     </header>
@@ -238,90 +246,84 @@
 
     <!-- Start Footer -->
 
-    <section class="wd-footer">
-      <div class="row animation-parent" data-animation-delay="180">
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-          <li>
-            <div class="textwidget">
-              <div class="widget-logo">
-                <img alt="logo" src="images/logo-white.png">
-                <p>The Flooring inc. is the leader of floor installation and repair in the country sed diam nonumy eirmod tempor invidunt ut labore and efficient strategy.</p>
-              </div>
+  <section class="wd-footer">
+    <div class="row animation-parent" data-animation-delay="180">
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <div class="textwidget">
+            <div class="widget-logo">
+              <img alt="logo" src="images/logo/logo alfa suportel .png">
+              <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
             </div>
-          </li>
-        </ul>
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-          <li>
-            <h2 class="block-title">Get in Touch</h2>
-            <div class="textwidget">
-              <div class="widget-info">
-                <ul>
-                  <li>
-                  <span><span>Phone:</span> +1 123 457 653</span>
+          </div>
+        </li>
+      </ul>
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <h2 class="block-title">Entrar em contato</h2>
+          <div class="textwidget">
+            <div class="widget-info">
+              <ul>
+                <li>
+                  <span><span>TEL:</span> (11) 2511-2233</span>
                 </li>
-                  <li>
-                  <span><span>Fax:</span> +1 496 457 654</span>
+                <li>
+                  <span><span>TEL:</span> (11) 2511-2144</span>
                 </li>
-                  <li>
-                  <span><span>Email:</span> <a href="mailto:email@website.com">our-mail@example.com</a></span>
+                <li>
+                  <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
                 </li>
-                  <li>
-                  <span><span>Adress:</span> 121 King Street, Melbourne 3000 Australia</span>
+                <li>
+                  <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
                 </li>
+              </ul>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <h2 class="block-title">Newsletter</h2>
+          <div class="textwidget">
+            <div class="wd-newsletter">
+              Assine seu boletim informativo
+              <div>
+                <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
+                <input type="submit" class="newslettersubmit" value="GO">
+                <ul class="inline-list">              
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li class="instagram">
+                    <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
+                  </li>                
                 </ul>
               </div>
             </div>
-          </li>
-        </ul>
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-          <li>
-            <h2 class="block-title">Newsletter</h2>
-            <div class="textwidget">
-              <div class="wd-newsletter">
-                Sign up your newsletter
-                <div>
-              <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
-              <input type="submit" class="newslettersubmit" value="GO">
-              <ul class="inline-list">
-                <li class="flickr">
-                  <a href="http://www.flickr.com/#"><i class="fa fa-flickr"></i></a>
-                </li>
-                <li class="facebook">
-                  <a href="https://www.facebook.com/#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="twitter">
-                  <a href="https://twitter.com/#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="vimeo">
-                  <a href="https://vimeo.com/#"><i class="fa fa-vimeo-square"></i></a>
-                </li>
-              </ul>
-            </div>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <footer class="wd-copyright">
-        <div class="row">
-          <div class="small-12 large-12 columns">
-            <div class="copyright-menu">
-              <ul id="menu-footer-menu" class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </div>
           </div>
-          <div class="copyright small-12 large-12 columns">
-            <p>
-              © 2017 Flooring All rights reserved.
-            </p>
+        </li>
+      </ul>
+    </div>
+    <footer class="wd-copyright">
+      <div class="row">
+        <div class="small-12 large-12 columns">
+          <div class="copyright-menu">
+            <ul id="menu-footer-menu" class="menu">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="about-us.html">Quem Somos</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="contact.html">Contato</a></li>
+            </ul>
           </div>
         </div>
-      </footer>
-    </section>
+        <div class="copyright small-12 large-12 columns">
+          <p>
+            © 2018 SDmarketingMobile All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+  </section>
 
     <!-- End Footer -->
 
