ajuste em css das paginas

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>AlfaSuportel</title>
+    <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
     <link rel="stylesheet" href="stylesheets/owl.carousel.css">
     <link rel="stylesheet" href="stylesheets/owl.theme.css">
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheets/app.css">
     <link rel="stylesheet" href="stylesheets/custom-style.css">
+    <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
   </head>
   <body>
 
