--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>AlfaSuportel</title>
+  <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
   <link rel="stylesheet" href="stylesheets/owl.carousel.css">
   <link rel="stylesheet" href="stylesheets/owl.theme.css">
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="stylesheets/custom-style.css">
   <link rel="stylesheet" href="stylesheets/backgroundimage.css">
   <link rel="stylesheet" href="stylesheets/sections.css">
+  <link rel="stylesheet" href="stylesheets/header.css">
   <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
 
 </head>
@@ -208,16 +209,16 @@
 
 <!-- Start Our Services -->
 
-<section class="our-services">
+<section class="our-services1">
   <div class="row">
-    <div class="small-12 large-6 large-offset-3 columns">
+    <div class="small-12 large-4 large-offset-4 columns">
       <div class="wd-title-section_c">
         <h2>Nossos Produtos</h2>
               </div>
     </div>
   </div>
   <div class="row">
-    <div class="small-12 large-4 columns">
+    <div class="small-12 large-2 columns">
       <div class="wd-section-text-icon">
         <a href="#">
           <div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp">
@@ -225,7 +226,7 @@
               <img src="images/catalogo/fotossuportel/brasil570.png" alt="icon" img-style="width: 350px;height: 247px">
             </div>
             <div class="box-description">
-              <h3>Churrasqueiras</h3>
+              <h6>Churrasqueiras</h6>
               <p>
                 Os melhores momentos da vida!
               </p>
@@ -234,15 +235,15 @@
         </a>
       </div>
     </div>
-    <div class="small-12 large-4 columns">
+    <div class="small-12 large-2 columns">
       <div class="wd-section-text-icon">
         <a href="#">
-          <div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp">
+          <div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp" >
             <div class="box-icon">
-              <img src="images/catalogo/fotossuportel/esp-duplo termico.jpg" width="350px" height="247px" alt="icon ">
+              <img src="images/catalogo/fotossuportel/alfa-fogao-baixa-pressao.jpg" alt="icon">
             </div>
             <div class="box-description">
-              <h3>Grelhas e Espetos</h3>
+              <h6>Fogoes</h6>
               <p>
                 Há muitas variações disponíveis
               </p>
@@ -251,15 +252,15 @@
         </a>
       </div>
     </div>
-    <div class="small-12 large-4 columns">
+    <div class="small-12 large-2 columns">
       <div class="wd-section-text-icon">
         <a href="#">
           <div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp">
             <div class="box-icon">
-              <img src="images/catalogo/fotossuportel/esp-duplo termico.jpg" width="350px" height="247px" alt="icon ">
+              <img src="images/catalogo/fotossuportel/alfa-fogao-baixa-pressao.jpg" width="350px" height="247px" alt="icon ">
             </div>
             <div class="box-description">
-              <h3>Grelhas e Espetos</h3>
+              <h6>Frigideias</h6>
               <p>
                 Há muitas variações disponíveis
               </p>
@@ -268,15 +269,15 @@
         </a>
       </div>
     </div>
-    <div class="small-12 large-4 columns">
+    <div class="small-12 large-2 columns">
       <div class="wd-section-text-icon">
         <a href="#">
           <div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp">
             <div class="box-icon">
-              <img src="images/catalogo/fotossuportel/esp-duplo termico.jpg" width="350px" height="247px" alt="icon ">
+              <img src="images/catalogo/fotossuportel/alfa-chapeira-grande-com-prensa.jpg" width="350px" height="247px" alt="icon ">
             </div>
             <div class="box-description">
-              <h3>Grelhas e Espetos</h3>
+              <h6>Chapeiras</h6>
               <p>
                 Há muitas variações disponíveis
               </p>
@@ -285,15 +286,15 @@
         </a>
       </div>
     </div>
-    <div class="small-12 large-4 columns">
+    <div class="small-12 large-2 columns">
       <div class="wd-section-text-icon">
         <a href="#">
           <div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp">
             <div class="box-icon">
-              <img src="images/catalogo/fotossuportel/esp-duplo termico.jpg" width="350px" height="247px" alt="icon ">
+              <img src="images/catalogo/fotossuportel/assa rapido1.jpg" width="350px" height="247px" alt="icon ">
             </div>
             <div class="box-description">
-              <h3>Grelhas e Espetos</h3>
+              <h6>Assa Rapido</h6>
               <p>
                 Há muitas variações disponíveis
               </p>
@@ -302,15 +303,15 @@
         </a>
       </div>
     </div>
-    <div class="small-12 large-4 columns">
+    <div class="small-12 large-2 columns">
       <div class="wd-section-text-icon">
         <a href="#">
           <div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp">
             <div class="box-icon">
-              <img src="images/catalogo/fotossuportel/fritadeira-retangular1.jpg"  width="350px" height="247px" alt="icon">
+              <img src="images/catalogo/fotossuportel/acendedor.jpg"  width="350px" height="247px" alt="icon">
             </div>
             <div class="box-description">
-              <h3>Fritadeiras a Gás</h3>
+              <h6>Acendedor</h6>
               <p>
                 Há muitas variações disponíveis
               </p>
@@ -323,7 +324,7 @@
 
 </section>
 
-  <!-- End Our Services -->
+  <!-- End Our Products -->
 
   <!-- Start Call To Action -->
 
