implementação catalogo individual

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="stylesheets/app.css">
     <link rel="stylesheet" href="stylesheets/custom-style.css">
     <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="stylesheet" href="stylesheets/sections.css">
     <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
   </head>
   <body>
@@ -164,7 +165,7 @@
         <div class="small-12 large-12 columns">
           <div class="wd-title-section_l">
             <h2>Entrar em contato</h2>
-            <h5>Neque porro quisquam est qui dolorem ipsum quia lorem ipsum dolor sit amet dolor sit amet, consectetur, adipisci velit...</h5>
+            <h5>Envie seu e mail e deixe sua necessidade que logo entraremos em contato</h5>
           </div>
         </div>
       </div>
@@ -174,16 +175,16 @@
             <div role="form" class="wpcf7">
               <form action="#" method="post" class="wpcf7-form" novalidate="novalidate">
                 <div class="small-12 large-4 columns">
-                  <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Name"></span>
+                  <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Nome"></span>
                 </div>
                 <div class="small-12 large-4 columns">
-                  <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="mail"></span>
+                  <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="E-mail"></span>
                 </div>
                 <div class="small-12 large-4 columns">
-                  <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Name"></span>
+                  <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Empresa"></span>
                 </div>
                 <div class="small-12 large-12 columns">
-                  <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Message"></textarea></span>
+                  <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Deixe sua mensagem"></textarea></span>
                 </div>
                 <div class="small-12 large-12 columns text-center">
                   <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit button small"><span class="ajax-loader"></span>
@@ -197,12 +198,12 @@
     <section class="wd-section-call-to-action">
       <div class="row call-to-action">
         <div class="small-12 large-8 columns">
-          <h4>OUR EXPERTIES</h4>
-          <p>From the start, we’ve always tried to do things properly. So it’s heart-warming to get recognition from people who feel the same way</p>
+          <h4>NOSSAS EXPERIÊNCIAS</h4>
+          <p>Desde o início, sempre tentamos fazer as coisas corretamente. Por isso, é caloroso obter reconhecimento de pessoas que sentem o mesmo</p>
         </div>
         <div class="small-12 large-4 columns">
           <div class="wd-call-to-action-btn">
-            <a href="#">VIEW MORE</a>
+            <a href="#">Veja Mais</a>
           </div>
         </div>
       </div>
@@ -210,11 +211,11 @@
 
     <!-- End Contact -->
 
-    <!-- Start Map -->
+    <!-- Start Map its not work well-->
 
     <div class="wd-section-map">
       <div class="map">
-        <div id="map-canvas" data-decription="" data-companyname="Flooring inc. Offices" data-zoom="11" data-longitude="-74.000335" data-latitude="40.719789"></div>
+        <div id="map-canvas" data-decription="06-Mar-2018" data-companyname="Alfasuportel" data-zoom="11" data-longitude="-23.530481" data-latitude="-46.413095"></div>
       </div>
     </div>
 
