--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 <!-- End Slider -->
 
-<!-- Start Our Services -->
+<!-- Start Our Products -->
 
 <section class="our-services1">
   <div class="row">
